--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ p {
 .buttons {
 	display: inline-block;
 	width: 100%;
-	padding-right: 10px;
-	margin-top: 10px;
+	padding: 0;
+	margin: 0;
 }
 
 .dialog-wrapper .waiting,
