--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ p {
     color: white;
     margin: 35px 25px 25px 25px;
     border-radius: 15px;
+	border: 2px solid rgba(0,0,0,.5);
 }
 
 .btn {
@@ -75,13 +76,13 @@ p {
     position: relative;
     display: block;
     width: 500px;
-    margin: auto;
-    background-color: white;
+    margin: auto;    
     margin-top: 15%;    
     z-index: 101;
     border-radius: 55px 55px 55px 5px;
 	box-shadow: 0 0 0 3px rgba(10, 10, 30, 0.5), 5px 5px 4px 4px rgba(0,0,0,0.4);
 	background-color: rgba(255, 255, 255, .95);
+	border: 2px dotted rgba(0,0,0,.3);
 }
 
 .vertical-line {
@@ -96,6 +97,10 @@ p {
 	border: none;
 }
 
+input[type="button"] {
+	border: 2px solid rgba(0,0,0,.5);
+}
+
 .dialog header h3 {
 	margin: 8px 0 0 15px;
 	line-height:1;
@@ -108,8 +113,8 @@ p {
     padding: 14px;
     border-radius: 55px 55px 0 0;
 	margin-top: 0;
-	outline: none;
-	border-bottom: 2px solid rgba(0,0,0,0.5);	
+	outline: none;	
+	border-bottom: 1px solid rgba(0,0,0,.1);
 }
 
 .sheen {
