--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 p {
 	margin: 30px 40px 0 40px;
 	color: #333;
+	cursor: default;
 }
 .important-text {
     background-color: #CF1D00;
@@ -104,6 +105,7 @@ input[type="button"] {
 .dialog header h3 {
 	margin: 8px 0 0 15px;
 	line-height:1;
+	cursor: default;
 }
 
 .dialog header {	
