--- a/style.css
+++ b/style.css
@@ -50,7 +50,22 @@ p {
 .waiting .spinner {
     margin: -4px 0 0 25px;
 }
-.dialog-wrapper {
+
+.dialog-wrapper {	
+	position: relative;
+	z-index: 100;
+	opacity: 0;
+    visibility: hidden;
+	-webkit-transition: opacity .05s linear 0s, visibility 0s linear .05s;
+}
+
+.dialog-wrapper.active {	
+	opacity: 1;
+    visibility: visible;
+    -webkit-transition: opacity .05s linear 0s, visibility 0s linear 0s;
+}
+
+#gray-curtain {
     background-color: rgba(0,0,0,.4);
     position: fixed;
     left: 0;
@@ -59,18 +74,18 @@ p {
     right: 0;
     width: 100%;
     height: 100%;    
-    z-index: 100;
+    z-index: 99;
     opacity: 0;
     visibility: hidden;
     display: block;
-    -webkit-transition: opacity .1s linear 0s, visibility 0s linear .1s;
+    -webkit-transition: opacity .05s linear 0s, visibility 0s linear .05s;
 	-webkit-user-select: none;
 }
 
-.dialog-wrapper.active {
-     opacity: 1;
-     visibility: visible;
-     -webkit-transition: opacity .1s linear 0s, visibility 0s linear 0s;
+#gray-curtain.active {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: opacity .05s linear 0s, visibility 0s linear 0s;
 }
 
 .dialog {
@@ -146,4 +161,24 @@ input[type="button"] {
     100% {
          -webkit-transform: rotate(360deg) scale(1);
     }
+}
+
+.three-d-context {
+position: relative;
+-webkit-perspective: 4000;
+}
+
+.front {
+z-index: 900;
+-webkit-transition: opacity 0s linear 0s, z-index 0s linear 0s, -webkit-transform 0s ease-in-out;
+-webkit-transform: rotateY(0deg);
+opacity: 1;
+-webkit-backface-visibility: hidden;
+}
+
+.three-d-context .flipped .front {
+-webkit-transition: opacity .25s linear 0s, z-index 0s linear .25s, -webkit-transform .35s ease-in-out;
+-webkit-transform: rotateY(180deg);
+opacity: 0;
+-webkit-backface-visibility: hidden;
 }
