--- a/style.css
+++ b/style.css
@@ -199,3 +199,8 @@ input[type="button"] {
 	opacity: 0;
 	-webkit-backface-visibility: hidden;
 }
+
+.grabbable {
+	background-image: -webkit-gradient(linear, center top, center bottom, color-stop(0.5, rgba(0,0,0,0.01)), color-stop(0.75, rgba(0,0,0,0.05)), color-stop(0.75, rgba(0,0,0,0.11)));
+	background-size: 55px 2px;
+}
