--- a/style.css
+++ b/style.css
@@ -8,12 +8,19 @@ p {
 	cursor: default;
 }
 
+@font-face {
+font-family: 'pictos';
+src:local('?'),url('./pictosWeb.woff') format('woff');
+font-weight:normal;
+font-style: normal;
+}
+
 .important-text {
     background-color: #CF1D00;
     padding: 6px !important;
     text-align: center;
     color: white;
-    margin: 35px 25px 25px 25px;
+    margin: 30px 25px 25px 25px;
     border-radius: 15px;
 	border: 2px solid rgba(0,0,0,.5);
 }
@@ -25,14 +32,19 @@ p {
 .btn {
 	float:right;
 	margin-right: 10px;
-	min-width:80px
+	min-width:80px;
+	border-radius: 40px !important;
+	line-height: 64px !important;
+	font-family: 'pictos';
+	font-size: 2.5em;
+	
 }
 
 .dialog menu {
 	display: inline-block;
 	width: 100%;
 	padding: 0;
-	margin: 17px 0px 21px -26px;
+	margin: 2px 0px 7px -4px;
 }
 
 .dialog-wrapper .spinner {
@@ -103,14 +115,14 @@ visibility: hidden;
 	margin: auto;    
 	margin-top: 15%;    
 	z-index: 101;
-	border-radius: 55px 55px 55px 5px;
+	border-radius: 5px 55px 55px 55px;
 	box-shadow: 0 0 0 3px rgba(10, 10, 30, 0.5), 5px 5px 4px 4px rgba(0,0,0,0.4);	
 	border: 2px dotted rgba(0,0,0,.3);	
 }
 
 .dialog article {	
 	background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(255,255,255,.9)),color-stop(100%,rgba(255,255,255,.7)));
-	border-radius: 0 0 55px 5px;
+	border-radius: 0 0 55px 55px;
 	width: 100%;
 	height: 100%;
 }
@@ -127,8 +139,57 @@ visibility: hidden;
 	border: none;
 }
 
-input[type="button"] {
-	border: 2px solid rgba(0,0,0,.5);
+.circular-btn {
+cursor: pointer;
+-webkit-appearance: button;
+border: 3px solid;
+border-color: rgba(0,109,204,0.95) rgba(0,109,204,0.95) rgba(0,109,204,0.95) !important;
+float: right;
+margin-right: 10px;
+min-width: 80px;
+border-radius: 40px !important;
+line-height: 71px !important;
+font-family: 'pictos';
+font-size: 2.5em;
+text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+background-color: transparent;
+}
+
+.circular-btn:active {
+-webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
+}
+
+.circular-btn:focus {
+outline: 5px auto -webkit-focus-ring-color;
+outline-offset: -2px;
+}
+
+.circular-btn:hover {
+text-decoration: none;
+border-color: rgba(0,89,184,1) rgba(0,89,184,1) rgba(0,89,184,1) !important;
+-webkit-transition: border-color .1s linear;
+}
+
+.circular-btn[data-action='cancel'] {
+border-color: rgba(0,0,0,0.45) rgba(0,0,0,0.45) rgba(0,0,0,0.45) !important;
+text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+}
+
+.circular-btn[data-action='success'] {
+border-color: rgba(0,200,0,0.45) rgba(0,200,0,0.45) rgba(0,200,0,0.45) !important;
+text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+}
+
+.circular-btn[data-action='cancel']:hover {
+text-decoration: none;
+border-color: rgba(0,0,0,0.85) rgba(0,0,0,0.85) rgba(0,0,0,0.85) !important;
+-webkit-transition: border-color .1s linear;
+}
+
+.circular-btn[data-action='success']:hover {
+text-decoration: none;
+border-color: rgba(0,200,0,0.85) rgba(0,200,0,0.85) rgba(0,200,0,0.85) !important;
+-webkit-transition: border-color .1s linear;
 }
 
 .dialog header h3 {
@@ -142,7 +203,7 @@ input[type="button"] {
 	color: black;
 	background-color: rgba(195, 221, 246, .95);
 	padding: 14px;
-	border-radius: 55px 55px 0 0;
+	border-radius: 5px 55px 0 0;
 	margin-top: 0;
 	outline: none;	
 	border-bottom: 1px solid rgba(0,0,0,.1);
