--- a/style.css
+++ b/style.css
@@ -148,20 +148,21 @@ float: right;
 margin-right: 10px;
 min-width: 80px;
 border-radius: 40px !important;
-line-height: 71px !important; /*important for positioning on PC*/
+line-height: 70px !important; /*important for positioning on PC*/
 height: 77px !important;
 font-family: 'pictos';
-font-size: 2.5em;
+font-size: 1.7em;
 text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 background-color: transparent;
 }
 
 .mac .circular-btn {
-line-height: 76px !important; /*important for positioning on mac*/
+line-height: 75px !important; /*important for positioning on mac*/
 }
 
 .circular-btn:active {
--webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
+box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05) !important;
+-webkit-transition: box-shadow .1s linear;
 }
 
 .circular-btn:focus {
@@ -172,7 +173,8 @@ outline-offset: -2px;
 .circular-btn:hover {
 text-decoration: none;
 border-color: rgba(0,89,184,1) rgba(0,89,184,1) rgba(0,89,184,1) !important;
--webkit-transition: border-color .1s linear;
+-webkit-transition: border-color .1s linear, box-shadow .1s linear;
+box-shadow: 0 0 9px 2px rgba(200, 200, 200, .2);
 }
 
 .circular-btn[data-action='cancel'] {
@@ -188,13 +190,11 @@ text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 .circular-btn[data-action='cancel']:hover {
 text-decoration: none;
 border-color: rgba(0,0,0,0.85) rgba(0,0,0,0.85) rgba(0,0,0,0.85) !important;
--webkit-transition: border-color .1s linear;
 }
 
 .circular-btn[data-action='success']:hover {
 text-decoration: none;
 border-color: rgba(0,200,0,0.85) rgba(0,200,0,0.85) rgba(0,200,0,0.85) !important;
--webkit-transition: border-color .1s linear;
 }
 
 .dialog header h3 {
@@ -270,7 +270,7 @@ height: 40px;
 position:absolute;
 right: 17px;
 top: 12px;
-border: 2px solid rgba(0,0,0,.5);
+border: 2px solid;
 border-radius: 40px;
 box-shadow: 0 0 9px 2px rgba(255, 255, 255, .2);
 background: -webkit-linear-gradient(#F4F4F4,#ECECEC) repeat scroll 0 0 transparent;
